# Soteric

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TESTING.md  secret.txt
.soteric/: profiles.json
desktop/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  store.ts  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs
desktop/src/pages/: ActivityLog.tsx  Dashboard.tsx  Monitor.tsx  Profiles.tsx  Settings.tsx
src/: biometrics.rs  cli.rs  encrypter.rs  lib.rs  main.rs  models.rs  process_scan.rs  profiles.rs
temp/: blacklist-files.json  blacklist-files.toml  blacklist-files.txt  blacklist-files.yaml  claude.txt  codex.txt  usage-examples.sh
