[package]
name = "soteric"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.6.0-rc.8"
aes-gcm = "0.11.0-rc.3"
getrandom = "0.4.2"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
objc2 = "0.6"
objc2-foundation = "0.3"
block2 = "0.6"
